--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
   "grpcio-tools >= 1.54.2, < 2",
   "protobuf >= 4.25.3, < 6",
   "frequenz-client-base >= 0.6.0, < 0.7.0",
+  "networkx",
 ]
 dynamic = ["version"]
 
